# ARC_Simulation_Reconstruction

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  OptimiseARC.cpp  RunARC.cpp
documentation/: Doxyfile
documentation/html/: ParticleMass_8cpp.html  ParticleMass_8cpp_source.html  ParticleMass_8h.html  ParticleMass_8h_source.html  ParticleTrack_8cpp.html  ParticleTrack_8cpp_source.html  ParticleTrack_8h.html  ParticleTrack_8h_source.html  PhotonMapper_8cpp.html  PhotonMapper_8cpp_source.html  PhotonMapper_8h.html  PhotonMapper_8h_source.html  Photon_8cpp.html  Photon_8cpp_source.html  Photon_8h.html  Photon_8h_source.html  RadiatorCell_8cpp.html  RadiatorCell_8cpp_source.html  RadiatorCell_8h.html  RadiatorCell_8h_source.html  RunARC_8cpp.html  RunARC_8cpp_source.html  SiPM_8cpp.html  SiPM_8cpp_source.html  SiPM_8h.html  SiPM_8h_source.html  TrackingVolume_8cpp.html  TrackingVolume_8cpp_source.html  TrackingVolume_8h.html  TrackingVolume_8h_source.html  annotated.html  apps_2CMakeLists_8txt.html  classParticleTrack-members.html  classParticleTrack.html  classRadiatorCell-members.html  classRadiatorCell.html  classSiPM-members.html  classSiPM.html  classTrackingVolume-members.html  classTrackingVolume.html  (+24 more)
documentation/latex/: ParticleMass_8cpp.tex  ParticleMass_8h.tex  Photon_8cpp.tex  (+35 more)
include/: ARCVector.h  BarrelRadiatorArray.h  BarrelRadiatorCell.h  DifferentialEvolution.h  EndCapRadiatorArray.h  EndCapRadiatorCell.h  EventDisplay.h  HalfRadiatorCell.h  HelixFunctor.h  HelixPath.h  Particle.h  ParticleMass.h  ParticleTrack.h  Photon.h  PhotonMapper.h  PhotonReconstructor.h  Quartic.h  RadiatorArray.h  RadiatorCell.h  ReconstructedPhoton.h  ResolutionOptimizable.h  ResolutionUtilities.h  Settings.h  SiPM.h  TrackingVolume.h  Utilities.h
options/: ARCGeometry.txt  General.txt  Optimisation.txt  Particle.txt  RadiatorCell.txt
src/: ARCVector.cpp  BarrelRadiatorArray.cpp  BarrelRadiatorCell.cpp  CMakeLists.txt  EndCapRadiatorArray.cpp  EndCapRadiatorCell.cpp  EventDisplay.cpp  HalfRadiatorCell.cpp  HelixFunctor.cpp  HelixPath.cpp  Particle.cpp  ParticleMass.cpp  ParticleTrack.cpp  Photon.cpp  PhotonMapper.cpp  PhotonReconstructor.cpp  Quartic.cpp  RadiatorArray.cpp  RadiatorCell.cpp  ReconstructedPhoton.cpp  ResolutionOptimizable.cpp  ResolutionUtilities.cpp  Settings.cpp  SiPM.cpp  TrackingVolume.cpp  Utilities.cpp
(+44 files in other folders)
